style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');

* {
  margin: 0px;
  padding: 0px;
}

/* TURN ON FOR DEV TESTING
div{
  border: 2px solid red;
}
 */

body {
  font-family: 'Quicksand', sans-serif;
  font-size: 18px;
  box-sizing: border-box;
  background-image: url("etch-a-sketch-bg.jpg");
  background-size: 860px;
  background-repeat: no-repeat;
  background-color: rgb(38, 38, 38);
  background-position: relative;
  background-position-x: center;
}

ol, li {
  list-style: none;
}

button{
  background-color: black;
  color: white;
  padding: 10px 20px;
  margin: 10px;
  font-size: 18px;
}

button:hover{
  cursor: pointer;
}

.page-wrapper{
  max-width: 100vw;
}

.section-wrapper{
  height: 100vh;
  padding: 30px 30px;
  display: flex;
  gap: 10px;
  justify-content: center;
}

.section-a{
}

.section-b{
  background-color: lightcoral;
}

.container{
  width: 420px;
  height: 420px;
  position: relative;
  top: 100px;
  left: -118px;
}

:root {
  --grid-cols: 1;
  --grid-rows: 1;
}

#container {
  display: grid;
  grid-template-rows: repeat(var(--grid-size), 1fr);
  grid-template-columns: repeat(var(--grid-size), 1fr);
}

.grid-item {
  border: 1px solid #ddd;
  background-color: black;
}

.controls{
  display: block;
  position: relative;
  left: -56px;
  top: 230px;
}

#grid-size{
  transform: rotate(-90deg);
  position: relative;
  top: 100px;
  left: -100px;
}

output{
  position: relative;
  top: 200px;
  left: -196px;
}

@media screen and (max-height: 550px){
  
  body{
    background-image: url("mobile-background.jpg");
    background-size: 610px 338px;
    background-repeat: no-repeat;
    background-position: relative;
  }

  .section-a{
  }
  
  .container{
    width: 300px;
    height: 300px;
    top: -11px;
    left: -118px;
  }

  .controls{
    max-width: 150px;
    left: -65px;
    top: 0px;
  }

  #grid-size{
    left: -30px;
  }

  output{
    left: 10px;
  }
}

@media screen and (min-width: 550px) and (max-width: 725px){
  .controls{
    display: none;
  }

  .container{
    left: 0px;
  }
};



.on{
  background-color: black;
}

.portrait-helper{
  display: none;
}

